[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game Assets/UserInterface/Scripts/Title screen.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/UserInterface/Fonts/HelveticaCEMedium.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.372549, 0.482353, 0.72549, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = -5.0
rect_scale = Vector2( 0.176145, 0.176145 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1500.0
margin_bottom = 675.0
rect_scale = Vector2( 5.67751, 5.67751 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer4" type="MarginContainer" parent="."]
visible = false
margin_top = 448.0
margin_right = 1025.0
margin_bottom = 590.0
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 20
custom_constants/margin_left = 300
custom_constants/margin_bottom = 20

[node name="Quit" type="Button" parent="MarginContainer4"]
margin_left = 300.0
margin_top = 20.0
margin_right = 725.0
margin_bottom = 122.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Quit Game"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1500.0
margin_bottom = 675.0
rect_scale = Vector2( 5.6871, 5.6871 )
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 10.0
margin_right = 1500.0
margin_bottom = 665.0
custom_constants/separation = 5
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1500.0
margin_bottom = 162.0
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Warren Tech" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 51.0
margin_right = 1500.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 2 )
text = "Warren Tech Golden Arcade"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 1500.0
margin_bottom = 655.0
grow_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1500.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_constants/margin_right = 200
custom_constants/margin_top = 20
custom_constants/margin_left = 900
custom_constants/margin_bottom = 20

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 900.0
margin_top = 20.0
margin_right = 1300.0
margin_bottom = 140.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 1500.0
margin_bottom = 324.0
size_flags_vertical = 3
custom_constants/margin_right = 200
custom_constants/margin_top = 20
custom_constants/margin_left = 900
custom_constants/margin_bottom = 20

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 900.0
margin_top = 20.0
margin_right = 1300.0
margin_bottom = 140.0
hint_tooltip = "Test"
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Credits"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 1500.0
margin_bottom = 488.0
size_flags_vertical = 3
custom_constants/margin_right = 200
custom_constants/margin_top = 20
custom_constants/margin_left = 900
custom_constants/margin_bottom = 20

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 900.0
margin_top = 20.0
margin_right = 1300.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 5 )
text = "Settings"

[connection signal="pressed" from="MarginContainer4/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Settings" to="." method="_on_Settings_pressed"]
